<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/mainContentFragment">

    <fragment
        android:id="@+id/mainContentFragment"
        android:name="ar.team.stockify.ui.main.MainContentFragment"
        android:label="Main"
        tools:layout="@layout/main_content_fragment_layout" />



</navigation>